Ininital version of login and signup changes
