# api/swagger/swagger.json
@@ -9,6 +9,41 @@
     "host": "localhost:8080",
     "basePath": "/api/v1/",
     "paths": {
+        "/auth": {
+            "post": {
+                "description": "Creates new user with the given detials",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Authentication"
+                ],
+                "summary": "New user signup",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/service.LoginInput"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/utils.Response"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/utils.Response"
+                        }
+                    }
+                }
+            }
+        },
         "/courses/": {
             "post": {
                 "description": "Creates a new Course entity",
@@ -276,6 +311,20 @@
                 }
             }
         },
+        "service.LoginInput": {
+            "type": "object",
+            "properties": {
+                "email": {
+                    "type": "string"
+                },
+                "password": {
+                    "type": "string"
+                },
+                "persistent": {
+                    "type": "boolean"
+                }
+            }
+        },
         "service.UpdateUserInfoInput": {
             "type": "object",
             "properties": {
@@ -307,6 +356,10 @@
         {
             "description": "Temporary endpoints for Swagger demo. To be removed",
             "name": "courses"
+        },
+        {
+            "description": "Login, logout and other security related operations",
+            "name": "Authentication"
         }
     ]
 }
